tests/snapshots/run_wpt_conformance__litert_relu_float16_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "relu.https.any.js",
    "relu float16 1D tensor",
    "litert",
    "PASS",
)
